# shadow_removal

./: README.html  README.md  pyproject.toml
README_files/libs/bootstrap/: bootstrap.min.css
src/shadow_removal/: __init__.py  cli.py  config.py  pipeline.py
src/shadow_removal/models/: __init__.py  unext.py
src/shadow_removal/utils/: __init__.py  image_processing.py
