[tool.poetry]
name = "shadow-removal"
version = "0.1.0"
description = "A deep learning based shadow removal pipeline"
authors = ["Stefan Janse van Rensburg <stefanj@mandela.ac.za>"]
readme = "README.md"
packages = [{include = "shadow_removal", from = "src"}]
include = [
    "src/shadow_removal/models/*.pt"
]

[tool.poetry.dependencies]
python = "^3.12.3"
torch = "^2.0.0"
numpy = "^2.1.2"
opencv-python = "^4.10.0.84"
pillow = "^11.0.0"
tqdm = "^4.65.0"
timm = "^1.0.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-sugar = "^1.0.0"
black = "^24.10.0"
isort = "^5.12.0"
flake8 = "^7.1.1"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
shadow-removal = "shadow_removal.cli:main"